--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Blog
-permalink: /blog/
+title: Notes
+permalink: notes/
 ---
 
 <div class="home">
@@ -35,7 +35,7 @@ permalink: /blog/
       {% endif %}
     {% endfor %}
   </ul>
-  
+
   <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
 
 </div>
