--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="home">
 
-  <p>, my name is Fabio. This is my home on the web. I believe it is important to own your own identity and content online. I use my online home as a creative outlet. I write notes you can find <a href="{{ "/notes" | prepend: site.baseurl }}">here</a> and post things <a href="https://twitter.com/FabioFilli">here</a>.</p>
+  <p>, my name is Fabio. This is my home on the web. I believe it is important to own your own identity and content online. I use my online home as a creative outlet. I write notes you can find <a href="{{ "/notes" | prepend: site.baseurl }}">here</a> and post tweets <a href="https://twitter.com/FabioFilli">here</a>.</p>
 
   <p class="rss-subscribe">Be notified of new notes. Subscribe to the <a href="{{ "/feed.xml" | prepend: site.baseurl }}">RSS feed</a>.</p>
 
